--- a/src/assets/sass/base/elements/_icons.scss
+++ b/src/assets/sass/base/elements/_icons.scss
@@ -82,3 +82,42 @@
     margin-right: size(5);
     color: #a0a0a0;
 }
+
+
+.tooltip {
+	position: relative;
+	display: inline-block;
+    opacity: 1;
+    z-index: 0;
+
+	.tooltiptext {
+		visibility: hidden;
+		width: 140px;
+        background-color: black;
+        color: #fff;
+        text-align: center;
+        border-radius: 6px;
+        padding: 10px;
+        position: absolute;
+        z-index: 1;
+        top: 50%;
+        left: 100%;
+        transform: translateY(-50%);
+		
+		&::after {
+			content: "";
+			position: absolute;
+			top: 50%;
+			right: 100%;
+			margin-top: -5px;
+			border-width: 5px;
+			border-style: solid;
+			border-color: transparent black transparent transparent;
+		}
+	}
+	&:hover {
+		.tooltiptext {
+			visibility: visible;
+		}
+	}
+}
