--- a/src/assets/sass/base/elements/_media.scss
+++ b/src/assets/sass/base/elements/_media.scss
@@ -5,10 +5,9 @@ object {
 	max-width: 100%;
 }
 
-video {
-	width: 2.5rem;
-	height: 50px; 
-	margin-right: 5px;
+.modal-body video {
+	width: 100%;
+	height: auto; 
 }
 
 img {
